--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@ See the License for the specific language governing permissions and
 limitations under the License. 
 
 /////////////////////////
-Name: Krishna          // 
-Github: @krishna6688   //
-Telegram: @hacker11000 // 
+Name: RAJ TECHIE       // 
+YouTube: https://youtube.com/c/TechieTrick//
+Telegram: @rajtechtips // 
 /////////////////////////
 -->
 <!DOCTYPE html>
